--- a/angular-frontend/src/app/todo-list.component.html
+++ b/angular-frontend/src/app/todo-list.component.html
@@ -1,5 +1,5 @@
 <div class="todo-content">
-    <h1 class="page-title">ToDoList</h1>
+    <h1 class="page-title">Family ToDoList</h1>
     <h2 class="page">created by: Madach Ferenc & Bognar Krisztian</h2>
     <div class="todo-create">
       <form #todoForm="ngForm" (ngSubmit) = "createTodo(todoForm)" novalidate>
